...
            app:srcCompat="@drawable/baseline_home_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- List View -->
    <ListView
        android:id="@+id/profile_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/browse_profile_header_const"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
