...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/header"
            android:padding="8dp">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Name"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
...
